--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -429,7 +429,7 @@ The following tests will be done to ensure that data is stored when appropriate.
 		Possible Answers: Yes or No\\
 		\\
 		Prompt Generated: \\
-		Do You need assistance?\\
+		Do you need assistance?\\
 		Possible Answers: Yes or No\\
 
 	\item{\textbf{DST\_3: Sensor Storage} \\}\label{DST3}
@@ -449,7 +449,7 @@ The following tests will be done to ensure that data is stored when appropriate.
 
 The following tests will be done to ensure that can be extracted and presented in a graphical manner deemed acceptable for the purpose of EMA analysis.
 \begin{enumerate}
-	\item{\textbf{DXT\_1: Extracting Regular Data} \\}\label{DXT1}
+	\item{\textbf{DXT\_1: Extracting Data} \\}\label{DXT1}
 	
 		Control: Manual 
 							
