Minor updates to reflection

--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -453,7 +453,7 @@ These soft skills are:
 	\item \textbf{Jessica:} Critical Thinking
 	\item \textbf{Oliver:} Engagement During Meetings
 	\item \textbf{Jonathan:} Time Management
-	\item \textbf{Anish:} Positive Attitude
+	\item \textbf{Anish:} Open-mindedness
 	\item \textbf{Nish:} Leadership
 	\item \textbf{Labeeb:} Communication
 	\end{itemize}
@@ -480,10 +480,10 @@ Developing these skills will be essential to the success of the project. It is t
 		\item \textit{For Jonathan:} Set up automated reminders and schedules for capstone related tasks.
 		\item \textit{For the Team:} Parcel work into sections in which the workload required is easily understood and planned for.
 		\end{enumerate}
-	\item \textbf{Positive Attitude:}
+	\item \textbf{Open-mindedness:}
 		\begin{enumerate}
-		\item \textit{For Anish:} Identify 3 things about each team member for which they are grateful for.
-		\item \textit{For the Team:} Actively celebrate the successes of the team, and regularly recognize the achievements of each individual team member.
+		\item \textit{For Anish:} Attach equivalent value to ideas that conflict with your own, and weigh objective pros and cons.
+		\item \textit{For the Team:} Actively promote "devil's advocate" mindsets when making important decisions.
 		\end{enumerate}
 	\item \textbf{Leadership:}
 		\begin{enumerate}
