--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -3,6 +3,8 @@
 \usepackage{booktabs}
 \usepackage{tabularx}
 \usepackage{hyperref}
+\usepackage{tikz}
+\def\checkmark{\tikz\fill[scale=0.4](0,.35) -- (.25,0) -- (1,.7) -- (.25,.15) -- cycle;}
 \hypersetup{
     colorlinks,
     citecolor=blue,
@@ -102,21 +104,21 @@ Verification and Validation plan will be done on both the hardware and software 
 
 \begin{tabular}{|m{5em}|m{5em}|m{25em}|}
   \hline
-  \textbf{Name}     & \textbf{Role}           & \textbf{Description}                                                                                                                                                                        \\
+  \label{sec_4_1}\textbf{Name} & \textbf{Role}                 & \textbf{Description}                                                                                                                                                                                                                                                \\
   \hline
-  Dr Luciano Macedo & End user                & Researcher who will be the end user, verifying all the user requirements and functionality in every sprints.                                                                                                             \\
+  Dr Luciano Macedo            & End user                      & Researcher who will be the end user, verifying all the user requirements and functionality in every sprints.                                                                                                                                                        \\
   \hline
-  Johnathan Hai     & Subsystem tester       & There will be a set of test cases pre-defined for every functional requirement. Jonathan will be testing the specific functions against the test cases using unit testing, integration testing and boundary condition tests as well as SRS verification. \\
+  Johnathan Hai                & Subsystem tester              & There will be a set of test cases pre-defined for every functional requirement. Jonathan will be testing the specific functions against the test cases using unit testing, integration testing and boundary condition tests as well as SRS verification.            \\
   \hline
-  Jessica Bae       & Black Box tester        & Testing the specific functions without knowing how the internal workflow is structured. This will include stress testing for I/O for all subsytems and boundary condition testing. Valgrind will also be used for code profiling and debugging memory leaks.                                                                                         \\
+  Jessica Bae                  & Black Box tester              & Testing the specific functions without knowing how the internal workflow is structured. This will include stress testing for I/O for all subsytems and boundary condition testing. Valgrind will also be used for code profiling and debugging memory leaks.        \\
   \hline
-  Labeeb Zaker      & Remote codebase manager & Ensuring the codebase on GitHub has no flaws, maintaining CI/CD, reviewing every commit added to ensure it meets the requirements without any possible case of errors. \\
+  Labeeb Zaker                 & Remote codebase manager       & Ensuring the codebase on GitHub has no flaws, maintaining CI/CD, reviewing every commit added to ensure it meets the requirements without any possible case of errors.                                                                                              \\
   \hline
-  Nish Shah         & Automated tester        & Maintaining the automated testing scripts to run certain functions against test cases that are repetitive to keep checking code is functional. Primarily using Python code coverage tools and unit testing frameworks for code development (unittest, Coverage.py).                                                          \\
+  Nish Shah                    & Automated tester              & Maintaining the automated testing scripts to run certain functions against test cases that are repetitive to keep checking code is functional. Primarily using Python code coverage tools and unit testing frameworks for code development (unittest, Coverage.py). \\
   \hline
-  Anish Rangarajan  & Hardware \& Automated tester    & Verification and testing of embedded development/hardware in C using Cunit and bullseye coverage for unit testing framework and code coverage.\\
+  Anish Rangarajan             & Hardware \& Automated tester  & Verification and testing of embedded development/hardware in C using Cunit and bullseye coverage for unit testing framework and code coverage.                                                                                                                      \\
   \hline
-  Oliver Foote      & White Box \& Database testing        & Testing the internal workflow such that for a given set of inputs, an expected output is returned. Database validation using Orion for stress test of I/O and database functionality. \\
+  Oliver Foote                 & White Box \& Database testing & Testing the internal workflow such that for a given set of inputs, an expected output is returned. Database validation using Orion for stress test of I/O and database functionality.                                                                               \\
   \hline
 \end{tabular}
 
@@ -126,65 +128,76 @@ The SRS verification plan will follow a checklist for reviewers based on an ad h
 
 
 \begin{center}
-\begin{tabular}{|p{3cm}|p{8cm}|p{4cm}|} 
+  \begin{tabular}{|p{3cm}|p{8cm}|p{4cm}|}
 
-  \hline
-  \textbf{Section of SRS}     & \textbf{Description}           & \textbf{Approach of Feedback}                                                                                                                                                                       
-  \\
-  \hline
-  General feedback and discussion & The verification will be done based on an ad hoc approach through the checklist below: \begin{itemize}
-  \item Verify System constrains for hardware and software.
-  \item Monitored and controlled variables are consistent.
-  \item Comparison to existing solutions is unambiguous.
-  \item Project Goals are relevant to description of device.
-  \item Requirements (functional \& non-functional) are prioritized and verified.
-  \item Event handling and FSM is verified and correct.
-  \end{itemize}               & Will be done by Stakeholder Dr Luciana Macedo, supervisor, classmates and Back-end Developers.\\
-  \hline
-  General System Description 4.1-4.3  & The verification for this section would be checking if System constrains and user characteristics are provided in detail without any ambiguity.                & Will be done by team member Jonathan Hai.                                                                                                             \\
-  \hline
-  Section 5 Definitions and variables     & Verifying if terminology and the use of monitored and controlled variables is consistent and correct. Assumptions are clearly mentioned and provided along with goals of the project.        & Will be done by team member  Nish Shah.\\
-  \hline
-  Required behavior and Requirements       & Validation of Functional and Non-functional requirements and to verify if the requirements are classified correctly. Checking required behavior as well.       & Will be done by team member Anish Rangarajan.                                                                                         \\
-  \hline
-  Section 8-12 Traceability matrices and normal operation      & Verification of matrices and graphs according to Requirements and also verifying if normal operation covers the required goals of the device. & Will be done by team member Labeeb Zaker.\\
-  \hline
-  Section 14-16        & Verification of FSM, Legal factors and Phase in Plan.       & Will be done by team member Jessica bae.                                                          \\
-  \hline
-\end{tabular}
-  \end{center}
+    \hline
+    \label{sec_4_2}\textbf{Section of SRS}                  & \textbf{Description}                                                                                                                                                                  & \textbf{Approach of Feedback}
+    \\
+    \hline
+    General feedback and discussion                         & The verification will be done based on an ad hoc approach through the checklist below: \begin{itemize}
+                                                                                                                                                       \item Verify System constrains for hardware and software.
+                                                                                                                                                       \item Monitored and controlled variables are consistent.
+                                                                                                                                                       \item Comparison to existing solutions is unambiguous.
+                                                                                                                                                       \item Project Goals are relevant to description of device.
+                                                                                                                                                       \item Requirements (functional \& non-functional) are prioritized and verified.
+                                                                                                                                                       \item Event handling and FSM is verified and correct.
+                                                                                                                                                     \end{itemize}                                                                                & Will be done by Stakeholder Dr Luciana Macedo, supervisor, classmates and Back-end Developers. \\
+    \hline
+    General System Description 4.1-4.3                      & The verification for this section would be checking if System constrains and user characteristics are provided in detail without any ambiguity.                                       & Will be done by team member Jonathan Hai.                                                    \\
+    \hline
+    Section 5 Definitions and variables                     & Verifying if terminology and the use of monitored and controlled variables is consistent and correct. Assumptions are clearly mentioned and provided along with goals of the project. & Will be done by team member  Nish Shah.                                                      \\
+    \hline
+    Required behavior and Requirements                      & Validation of Functional and Non-functional requirements and to verify if the requirements are classified correctly. Checking required behavior as well.                              & Will be done by team member Anish Rangarajan.                                                \\
+    \hline
+    Section 8-12 Traceability matrices and normal operation & Verification of matrices and graphs according to Requirements and also verifying if normal operation covers the required goals of the device.                                         & Will be done by team member Labeeb Zaker.                                                    \\
+    \hline
+    Section 14-16                                           & Verification of FSM, Legal factors and Phase in Plan.                                                                                                                                 & Will be done by team member Jessica bae.                                                     \\
+    \hline
+  \end{tabular}
+\end{center}
 
 \subsection{Design Verification Plan}
 
-\wss{Plans for design verification}
-
-\wss{The review will include reviews by your classmates}
-
-\wss{Create a checklists?}
-
+\begin{tabular}{|p{2cm}|p{8cm}|p{4cm}|}
+  \hline
+  \label{sec_4_3}\textbf{Test Categories} & \textbf{Description}                                                                                                                                                                                                                                                                                                 & \textbf{Approach}                      \\
+  \hline
+  Response Feedback Test                  & This test will cover most of our sensor tests. We will set up scenarios, going beyond thresholds to observe if we get an expected feedback as a result.                                                                                                                                                              & Performed by Developers and Dr. Macedo \\
+  \hline
+  User Interface Test                     & This test is where we will be testing all of our buttons rigorously, ensuring the buttons work as expected. We will also be ensuring that the screen size is visible and scaled well to fit the screen.                                                                                                              & Performed by Developers                \\
+  \hline
+  Durability Test                         & Ideally a faulty sensor should not impact all the other sensors. The way to verify this isn't the case is forcefully damaging a sensor, and adding it to the circuitry. We then check if the tracked values from other sensors are impacted.                                                                         & Performed by Developers                \\
+  \hline
+  Database Scalability Test               & Since it's live data being stored, there are approximately 1000 requests per second being made to our database with the large chunks of data. We will be creating a scenario using postman where we are feeding as many requests as possible to our database and ensure our database is able to handle the requests. & Performed by Developers                \\
+  \hline
+  Hardware Communication                  & Valgrind will be used at every stage to see how the memory is being allocated, which processes are using, we will also be using an execution tracker perhaps to ensure our workflow is working as expected.                                                                                                          & Performed by Developers                \\
+  \hline
+\end{tabular}
+\pagebreak
 \subsection{Verification and Validation Plan Verification Plan}
 
-\wss{The verification and validation plan is an artifact that should also be verified.}
-
-\wss{The review will include reviews by your classmates}
-
-\wss{Create a checklists?}
-
+Since VNV plan document mostly covers about how to validate our device works, through verification of different test cases. The only way to verify this document is checking all such scenarios and getting expected results.\\
+\\The following will be done to verify VnV plan:\\
+\\\checkmark Each member has their own verification tasks to verify as per \hyperref[sec_4_1]{4.1} throughout the development phase. They have to ensure the tests don't fail at any of the expected scenarios and works as expected from user's point of view.\\
+\\\checkmark Each member has to verify the SRS requirements through their assigned tasks which can be found in \hyperref[sec_4_2]{4.2}. The variables need to be controlled accordingly and specific scenarios needed to be tested to ensure functionality without errors.\\
+\\\checkmark Verify each component of the design in \hyperref[sec_4_3]{4.3} as being developed, so that we can guarantee unit testing is successful before system testing.\\
+\\\checkmark Ensure that everyone attends the code-review meetings. The member who fails to join the review, a reviewer will be scheduled to review later. Tests against all scenarios to ensure all cases work.\\
+\\\checkmark All the functional requirements have test cases that can be found in \hyperref[sec_5_1]{5.1}. Verify all the test cases, ensure that the outputs are expected and within bounds. Check during tests, that the variables are being controlled and monitored accordingly.\\
 \subsection{Implementation Verification Plan}
 
 The implementation verification plan will involve static and dynamic code analysis as the debugging methods to find bugs early in development. The checklist below can be used in development to follow the Implementation verification plan.\\
 The following methods will be used for static code analysis:
 \begin{itemize}
-\item Bi-weekly code review with sub-teams (hardware, software, frontend/backend) for code walk through.
-\item Weekly code review with entire team for system-level software design.
-\item Use a SAST tool to scan source code, binary and byte code to reveal vulnerabilities.
-\item Use static analysis tools such as Pylint, lint described in \ref{Automation} to find bugs in code.
+  \item Bi-weekly code review with sub-teams (hardware, software, frontend/backend) for code walk through.
+  \item Weekly code review with entire team for system-level software design.
+  \item Use a SAST tool to scan source code, binary and byte code to reveal vulnerabilities.
+  \item Use static analysis tools such as Pylint, lint described in \ref{Automation} to find bugs in code.
 \end{itemize}
 Dynamic code testing will help identify exploitable vulnerabilities. The following methods will be used for dynamic code analysis:
 \begin{itemize}
-\item Use a DAST tool as a black-box tester which inputs malicious SQL queries, Long input strings and invalid data to exploit assumptions made by developers.
-\item Running modular code separately against variety of inputs to find bugs in code.
-\item Use open source tools based on the programming language (CrossHair for Python, CHAP for C) to provide a comprehensive view of performance and security of the device.
+  \item Use a DAST tool as a black-box tester which inputs malicious SQL queries, Long input strings and invalid data to exploit assumptions made by developers.
+  \item Running modular code separately against variety of inputs to find bugs in code.
+  \item Use open source tools based on the programming language (CrossHair for Python, CHAP for C) to provide a comprehensive view of performance and security of the device.
 \end{itemize}
 
 
@@ -193,20 +206,20 @@ Dynamic code testing will help identify exploitable vulnerabilities. The followi
 Automated testing and verification tools will be based on the different programming languages and tools used in the development of the device. As covered in the development plan, (reference dev plan>>>) the following unit testing frameworks, profiling tools and linters will be used for verification of code:
 
 \begin{itemize}
-\item Python: 
-	\begin{itemize}
-		 \item unittest will be used as the Unit testing framework for Python to cover test automation, aggregation of tests (integration 							testing) and independence of tests from the reporting framework.
-		\item Coverage.py will be used to measure code coverage and to gauge the effectiveness of tests performed.
-		\item Pylint will be used as the linter/static code analyser which will check for errors and enforce a coding standard.
-	\end{itemize}
-\item C: 
-	\begin{itemize}
-	\item CUnit will be used as a unit testing framework for embedded system development.
-	\item Bullseye coverage will be used for C code coverage analysis.
-	\item lint will be used as the linter/static code analyser for development in C.
-	\end{itemize}
-\item Valgrind will be used for Python (pytest-valgrind) and C as a debugging tool for code profiling.
-\item SQL/Database testing: Orion will be used to stress test an I/O coverage and to make sure the database functions as expected.
+  \item Python:
+        \begin{itemize}
+          \item unittest will be used as the Unit testing framework for Python to cover test automation, aggregation of tests (integration 							testing) and independence of tests from the reporting framework.
+          \item Coverage.py will be used to measure code coverage and to gauge the effectiveness of tests performed.
+          \item Pylint will be used as the linter/static code analyser which will check for errors and enforce a coding standard.
+        \end{itemize}
+  \item C:
+        \begin{itemize}
+          \item CUnit will be used as a unit testing framework for embedded system development.
+          \item Bullseye coverage will be used for C code coverage analysis.
+          \item lint will be used as the linter/static code analyser for development in C.
+        \end{itemize}
+  \item Valgrind will be used for Python (pytest-valgrind) and C as a debugging tool for code profiling.
+  \item SQL/Database testing: Orion will be used to stress test an I/O coverage and to make sure the database functions as expected.
 \end{itemize}
 
 \subsection{Software Validation Plan}
